--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -37,6 +37,19 @@
     terraform_download_links:
       Debian: "https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_linux_amd64.zip"
       MacOSX: "https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_darwin_amd64.zip"
+    dc_1_ms_count: 1
+    dc_2_ms_count: 1
+    dc_1_ds_count: 3
+    dc_2_ds_count: 3
+    dc_1_rmp_count: 2
+    dc_2_rmp_count: 2
+    dc_1_qpid_count: 2
+    dc_2_qpid_count: 2
+    dc_1_pg_only_count: 0
+    dc_1_pgmaster_count: 1
+    dc_1_pgstandby_count: 0
+    dc_2_pgstandby_count: 1
+
 
   tasks:
     - name: Install archive management packages
@@ -79,6 +92,16 @@
           zone: "{{ default_zone }}"
           credentials_file: "{{ gcp_credentials_file }}"
           gcp_project_name: "{{ gcp_project_name }}"
-          dc_1_pg_only_count: 1
-          dc_1_pgmaster_count: 0
-          dc_1_pgstandby_count: 0
+          dc_1_ms_count: "{{ dc_1_ms_count }}"
+          dc_2_ms_count: "{{ dc_2_ms_count }}"
+          dc_1_ds_count: "{{ dc_2_ds_count }}"
+          dc_2_ds_count: "{{ dc_2_ds_count }}"
+          dc_1_rmp_count: "{{ dc_1_rmp_count }}"
+          dc_2_rmp_count: "{{ dc_2_rmp_count }}"
+          dc_1_qpid_count: "{{ dc_1_qpid_count }}"
+          dc_2_qpid_count: "{{ dc_2_qpid_count }}"
+          dc_1_pg_only_count: "{{ dc_1_pg_only_count }}"
+          dc_1_pgmaster_count: "{{ dc_1_pgmaster_count }}"
+          dc_1_pgstandby_count: "{{ dc_1_pgstandby_count }}"
+          dc_2_pgstandby_count: "{{ dc_2_pgstandby_count }}"
+
