expanded to create 2 DCs

--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -54,7 +54,7 @@
   tasks:
     - name: Install archive management packages
       become: true
-      apt_get:
+      apt:
         name: "unzip"
         state: present
       when: ansible_distribution == "Debian"
