--- a/post-installation/remove/remove-components/remove-analytics.yml
+++ b/post-installation/remove/remove-components/remove-analytics.yml
@@ -21,10 +21,10 @@
     - { role: apigee-opdk-settings-postgres, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
     - { role: apigee-opdk-server-self, server_types: ['qs'], tags: ['self'] }
     - { role: apigee-opdk-server-self, server_types: ['ps'], tags: ['self'] }
-    - { role: apigee-opdk-setup-bootstrap-rollback, tags: ['rollback-only'] }
     - { role: apigee-opdk-setup-postgres-remove }
     - { role: apigee-opdk-setup-qpid-remove }
     - { role: apigee-opdk-setup-scopes-remove }
     - { role: apigee-opdk-setup-axgroup-remove }
+    - { role: apigee-opdk-setup-bootstrap-rollback, tags: ['rollback'] }
     - { role: apigee-server-restart, tags: ['restart'] }
 
