--- a/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
+++ b/infrastructure/gce-management/apigee-edge-tf/gce-create.yml
@@ -48,6 +48,7 @@
     dc_1_pg_only_count: 1
     dc_1_pgmaster_count: 0
     dc_1_pgstandby_count: 0
+    dc_2_pgstandby_count: 0
 
   tasks:
     - name: Install archive management packages
