--- a/post-installation/validations/rmp/requirements.yml
+++ b/post-installation/validations/rmp/requirements.yml
@@ -3,3 +3,13 @@
 - src: https://github.com/carlosfrias/apigee-opdk-setup-validate.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-validate-cleanup.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-modules.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-start-components.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-stop-components.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-private-address.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-region.git
