--- a/infrastructure/ssh-tunnels/tunnel.yml
+++ b/infrastructure/ssh-tunnels/tunnel.yml
@@ -1,4 +1,9 @@
 ---
+- name: SSH Tunnels Cache Update
+  hosts: ms[0]
+  roles:
+    - { role: apigee-opdk-settings-private-address  }
+
 - name: Create SSH Tunnels
   hosts: ms[0]
 
@@ -16,7 +21,7 @@
 #    - { target_ip_address: "{{ hostvars[groups['pgstandby'][1]]['private_address'] }}", target_port: "5433", port: "5433" }
 
   roles:
-  - { role: apigee-opdk-settings-private-address, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup']  }
+  - { role: apigee-opdk-settings-private-address }
 
   tasks:
   - name: Create SSH tunnels
