--- a/post-installation/validations/rmp/validate.yml
+++ b/post-installation/validations/rmp/validate.yml
@@ -8,6 +8,8 @@
       - "~/.apigee-secure"
       - "~/.apigee"
   roles:
-    - { role: apigee-opdk-modules, tags: ['minimum', 'config', 'r-config'] }
+    - { role: apigee-opdk-modules, tags: ['validate', 'validate-cleanup','validate-setup'] }
+    - { role: apigee-opdk-settings-private-address, tags: ['validate', 'validate-cleanup']  }
+    - { role: apigee-opdk-settings-region, tags: ['validate', 'validate-cleanup']  }
     - { role: apigee-opdk-setup-validate, tags: ['validate-setup'] }
     - { role: apigee-opdk-setup-validate-cleanup, tags: ['validate-cleanup'] }
