--- a/post-installation/validations/rmp/requirements.yml
+++ b/post-installation/validations/rmp/requirements.yml
@@ -13,3 +13,5 @@
 - src: https://github.com/carlosfrias/apigee-opdk-settings-private-address.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-settings-region.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-management-server.git
