--- a/post-installation/validations/rmp/validate.yml
+++ b/post-installation/validations/rmp/validate.yml
@@ -1,7 +1,7 @@
 ---
 - name: Update Cache for validate config file generation
   hosts: planet
-  tags: ['validate', 'validate-cleanup','validate-setup']
+  tags: ['setup', 'cleanup']
   vars:
     property_folders:
       - "~/.apigee-secure"
@@ -14,16 +14,30 @@
 
 - name: Validate Routers & Message Processors
   hosts: rmp,r
-  tags: ['validate']
+  tags: ['setup']
   serial: 1
   vars:
     property_folders:
       - "~/.apigee-secure"
       - "~/.apigee"
   roles:
-    - { role: apigee-opdk-modules, tags: ['validate', 'validate-cleanup','validate-setup'] }
-    - { role: apigee-opdk-settings-private-address, tags: ['validate', 'validate-cleanup','validate-setup']  }
-    - { role: apigee-opdk-settings-management-server, tags: ['validate', 'validate-cleanup','validate-setup']  }
-    - { role: apigee-opdk-settings-region, tags: ['validate', 'validate-cleanup','validate-setup']  }
-    - { role: apigee-opdk-setup-validate, tags: ['validate-setup'] }
-    - { role: apigee-opdk-setup-validate-cleanup, tags: ['validate-cleanup'] }
+    - { role: apigee-opdk-modules }
+    - { role: apigee-opdk-settings-private-address }
+    - { role: apigee-opdk-settings-management-server }
+    - { role: apigee-opdk-settings-region }
+    - { role: apigee-opdk-setup-validate }
+
+- name: Cleanup Validate Routers & Message Processors
+  hosts: rmp,r
+  tags: ['cleanup']
+  serial: 1
+  vars:
+    property_folders:
+      - "~/.apigee-secure"
+      - "~/.apigee"
+  roles:
+    - { role: apigee-opdk-modules }
+    - { role: apigee-opdk-settings-private-address }
+    - { role: apigee-opdk-settings-management-server }
+    - { role: apigee-opdk-settings-region }
+    - { role: apigee-opdk-setup-validate-cleanup}
